<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="Search">Search</string>
    <string name="searchQuery">Enter Search Query</string>
    <string name="title_activity_full_image_view">FullImageView</string>
    <string name="title_activity_settings">Settings</string>
    <string name="searchOptions">Advanced Search Options</string>
    <string name="imageSize">Image Size</string>
    <string name="colorFilter">Color Filter</string>
    <string name="imageType">Image Type</string>
    <string name="siteFilter">Site Filter</string>
    
    <string-array name="ImageSize">
         <item>any</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
    
	<string-array name="colorFilter">
	     <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
         <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    
	<string-array name="imageType">
	    <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
        <string name="save">Save</string>
    
</resources>
